--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ terraform.tfstate.backup
 *.tfstate
 *.tfstate.backup
 .terraform.lock.hcl
+.terraform.tfstate.lock.info
 
 # OS generated files
 .DS_Store
