--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ terraform.tfstate.backup
 *.tfstate.backup
 .terraform.lock.hcl
 .terraform.tfstate.lock.info
+terraform.tfvars
 
 # OS generated files
 .DS_Store
