--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ terraform.tfstate.backup
 .terraform.lock.hcl
 .terraform.tfstate.lock.info
 terraform.tfvars
+ec2_key.pem
 
 # OS generated files
 .DS_Store
